--- a/css/styles.css
+++ b/css/styles.css
@@ -136,13 +136,15 @@ h1 {
     
 }
 
-.contenido_popup2 {
+.contenido_popup2,
+.contenido_popup3 {
     display: flex;
     flex-direction: column;
     width: 100%;
 }
 
-.inputs_tarea2 {
+.inputs_tarea2,
+.inputs_tarea3 {
     display: flex;
     flex-direction: column;
     gap: 1rem;
